# pycrimeprediction

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycrimeprediction/: time_period.py
tests/: test_add_if_crime.py  test_perform_analysis.py  test_pycrimeprediction.py  test_read_save_data.py  test_time_period.py
